# xtc_stream

./: CMakeLists.txt  README.md
include/: xdrfile.h  xdrfile_xtc.h
src/: xdrfile.c  xdrfile_xtc.c  xtcdecompile.c  xtcstream.c.old
